20 March 2017: Wouter
	- #1217. DNSCrypt support, with --enable-dnscrypt, libsodium and then
	  enabled in the config file from Manu Bretelle.
	- make depend, autoconf, remove warnings about statement before var.
	- lru_demote and lruhash_insert_or_retrieve functions for getdns.
	- fixup for lruhash (whitespace and header file comment).
	- dnscrypt tests.

17 March 2017: Wouter
	- Patch for view functionality for local-data-ptr from Björn Ketelaars.
	- Fix #1237 - Wrong resolving in chain, for norec queries that get
	  SERVFAIL returned.

16 March 2017: Wouter
	- Fix that SHM is not inited if not enabled.
	- Add trustanchor.unbound CH TXT that gets a response with a number
	  of TXT RRs with a string like "example.com. 2345 1234" with
	  the trust anchors and their keytags.
	- Fix that looped DNAMEs do not cause unbound to spend effort.
	- trustanchor tags are sorted.  reusable routine to fetch taglist.

13 March 2017: Wouter
	- testbound understands Deckard MATCH rcode question answer commands.
	- Fix #1235: Fix too long DNAME expansion produces SERVFAIL instead
	  of YXDOMAIN + query loop, reported by Petr Spacek.

10 March 2017: Wouter
	- Fix #1234: shortening DNAME loop produces duplicate DNAME records
	  in ANSWER section.

9 March 2017: Wouter
	- --disable-sha1 disables SHA1 support in RRSIG, so from DNSKEY and
	  DS records.  NSEC3 is not disabled.
	- fake-sha1 test option; print warning if used.  To make unit tests.
	- unbound-control list local zone and data commands listed in the
	  help output.

8 March 2017: Wouter
	- make depend for build dependencies.
	- swig version 2.0.1 required.
	- fix enum conversion warnings

7 March 2017: Wouter
	- Fix #1230: swig version 2.0.0 is required for pythonmod, with
	  1.3.40 it crashes when running repeatly unbound-control reload.
	- Response actions based on IP address from Jinmei Tatuya (Infoblox).

6 March 2017: Wouter
	- Fix #1229: Systemd service sandboxing in contrib/unbound.service.
	- iana portlist update
